# ai-capabilities-and-risk-demo-hackbook

./: README.md
python/1_chatbot/: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
python/1_chatbot/python_chatbot/: app.py
python/1_chatbot/python_chatbot/lib/: llm.py
python/2_phonebot/: .env  .gitignore  README.md  bun.lockb  docker-compose.yaml  package.json  pyproject.toml
python/2_phonebot/frontend/: Dockerfile  README.md  bun.lockb  vite.config.ts
python/2_phonebot/python_phonebot/: env.py  llm.py  server.py
python/3_phonebot_custom_llm/: .env  Dockerfile.localtunnel  README.md  docker-compose.yaml  pyproject.toml
python/3_phonebot_custom_llm/frontend/: Dockerfile  package.json
python/3_phonebot_custom_llm/frontend/src/: App.tsx
python/3_phonebot_custom_llm/python_phonebot/: llm.py  server.py
svelte/1_chatbot/: .gitignore  Dockerfile  README.md  bun.lockb  docker-compose.yaml  package.json
svelte/1_chatbot/src/routes/: +page.svelte
